# Faceit-App

./: .env  .gitignore  README.md  package-lock.json  package.json  requirements.txt  vite.config.ts
public/: index.html
src/: package-lock.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_calls.rs
src/jsx/: apppage.jsx
src/tsx/: App.tsx
